--- a/tryyml.yml
+++ b/tryyml.yml
@@ -2,12 +2,5 @@
 - name: Find some stuff
   hosts: 127.0.0.1
   connection: local
-  vars:
-    username: "jhay"
-  tasks:
-   - name: Find the hostname
-     debug:
-      var: ansible_hostname
-   - name: Find ipv6 address
-     debug:
-      var: ansible_all_ipv6_addresses[1]
+  roles:
+  - bootcamp1
