--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ install:
 
 script:
   # Basic role syntax check
-  - cd roles/bootcamp1
-  - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+  #- cd roles/bootcamp1
+  - ansible-playbook roles/bootcamp1/tests/test.yml -i roles/bootcamp1/tests/inventory --syntax-check
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
